# OnnxDetServer-GO

./: .gitignore  Dockerfile  OnnxDetServer-Go.go  README.md  build.bat  buildCV.bat  config.yaml  go.mod  go.sum  launcher.go  main.go
Adhoc/: def.go
engine/: Backend_linux.go  Backend_win.go  LibImport.go  def.go  engine.go  engine_test.go  loadLib.go  onnxdet.go  opt.md  standardEngine.go
engine/ncnn/: ncnndef.go  ncnndet.go
engine/onnx/: onnxdef.go  onnxdet.go
gRPC/: Api.pb.go  Api.proto  Api_grpc.pb.go  gRPCinterface.go  gRPCinterface_test.go
interface/: def.go  iface.go
logger/: def.go
monitor/: def.go
prometheus/: def.go
src/: NcnnDet.h
src/ncnn/: CMakeLists.txt  NcnnDet.cpp  NcnnDet.h
